--- a/EmotionClassificationAndIntensityDetection_w2v.ipynb
+++ b/EmotionClassificationAndIntensityDetection_w2v.ipynb
@@ -414,10 +414,9 @@
    "outputs": [],
    "source": [
     "def transform(X,word2vec):\n",
-    "    dim = 100\n",
     "    return np.array([\n",
     "        np.mean([word2vec[w] for w in words if w in word2vec]\n",
-    "                or [np.zeros(dim)], axis=0)\n",
+    "                or [np.zeros(100)], axis=0)\n",
     "        for words in X\n",
     "    ])"
    ]
@@ -429,10 +428,9 @@
    "outputs": [],
    "source": [
     "def sum_transform(X,word2vec):\n",
-    "    dim = 100\n",
     "    return np.array([\n",
     "        np.sum([word2vec[w] for w in words if w in word2vec]\n",
-    "                or [np.zeros(dim)], axis=0)\n",
+    "                or [np.zeros(100)], axis=0)\n",
     "        for words in X\n",
     "    ])"
    ]
@@ -512,6 +510,88 @@
     "clf_emo = clf_mean.predict(x_test)\n",
     "print(\"f1-score:\",f1_score(clf_emo, df_test.emotion,average='weighted'))\n",
     "print(clf_mean.loss_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Method 2: take sum of word embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_test=df.loc[df['is_valid']==True]\n",
+    "df_train=df.loc[df['is_valid']==False]\n",
+    "x_train_sum = sum_transform(df_train['text'],w2v)\n",
+    "x_test_sum = sum_transform(df_test['text'],w2v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MLPClassifier(activation='relu', alpha=1e-05, batch_size='auto', beta_1=0.9,\n",
+       "              beta_2=0.999, early_stopping=False, epsilon=1e-08,\n",
+       "              hidden_layer_sizes=(40, 20), learning_rate='adaptive',\n",
+       "              learning_rate_init=0.001, max_iter=2000, momentum=0.9,\n",
+       "              n_iter_no_change=10, nesterovs_momentum=True, power_t=0.5,\n",
+       "              random_state=1, shuffle=True, solver='sgd', tol=0.0001,\n",
+       "              validation_fraction=0.1, verbose=False, warm_start=False)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf_sum = MLPClassifier(solver='sgd', alpha=1e-5, learning_rate = 'adaptive',\n",
+    "                     hidden_layer_sizes=(40, 20), random_state=1, max_iter = 2000)\n",
+    "clf_sum.fit(x_train_sum,df_train.emotion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f1-score: 0.4702452054523764\n",
+      "1.3708199872285332\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ZheMin\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\sklearn\\metrics\\classification.py:1439: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no true samples.\n",
+      "  'recall', 'true', average, warn_for)\n"
+     ]
+    }
+   ],
+   "source": [
+    "clf_emo_sum = clf_sum.predict(x_test_sum)\n",
+    "print(\"f1-score:\",f1_score(clf_emo_sum, df_test.emotion,average='weighted'))\n",
+    "print(clf_sum.loss_)"
    ]
   },
   {
