--- a/EmotionVADPrediction_w2v.ipynb
+++ b/EmotionVADPrediction_w2v.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "unable to import 'smart_open.gcs', disabling that module\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -18,16 +26,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "emo = pd.read_csv('emobank.csv')"
+    "emo = pd.read_csv('dataset/input/emobank.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +133,7 @@
        "4  Sherry learned through our Future Works class ...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +177,7 @@
        "Name: split, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +330,7 @@
        "4  [sherry, learned, future, works, class, could,...  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -354,105 +362,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class MeanEmbeddingVectorizer(object):\n",
-    "    def __init__(self, word2vec):\n",
-    "        self.word2vec = word2vec\n",
-    "        # if a text is empty we should return a vector of zeros\n",
-    "        # with the same dimensionality as all the other vectors\n",
-    "        self.dim = 100\n",
-    "\n",
-    "    def fit(self, X, y):\n",
-    "        return self\n",
-    "\n",
-    "    def transform(self, X):\n",
-    "        return np.array([\n",
-    "            np.mean([self.word2vec[w] for w in words if w in self.word2vec]\n",
-    "                    or [np.zeros(self.dim)], axis=0)\n",
-    "            for words in X\n",
-    "        ])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class TfidfEmbeddingVectorizer(object):\n",
-    "    def __init__(self, word2vec):\n",
-    "        self.word2vec = word2vec\n",
-    "        self.word2weight = None\n",
-    "        self.dim = 100\n",
-    "\n",
-    "    def fit(self, X, y):\n",
-    "        tfidf = TfidfVectorizer(analyzer=lambda x: x)\n",
-    "        tfidf.fit(X)\n",
-    "        # if a word was never seen - it must be at least as infrequent\n",
-    "        # as any of the known words - so the default idf is the max of \n",
-    "        # known idf's\n",
-    "        max_idf = max(tfidf.idf_)\n",
-    "        self.word2weight = defaultdict(\n",
-    "            lambda: max_idf,\n",
-    "            [(w, tfidf.idf_[i]) for w, i in tfidf.vocabulary_.items()])\n",
-    "\n",
-    "        return self\n",
-    "\n",
-    "    def transform(self, X):\n",
-    "        return np.array([\n",
-    "                np.mean([self.word2vec[w] * self.word2weight[w]\n",
-    "                         for w in words if w in self.word2vec] or\n",
-    "                        [np.zeros(self.dim)], axis=0)\n",
-    "                for words in X\n",
-    "            ])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.ensemble import ExtraTreesClassifier\n",
-    "\n",
-    "etree_w2v = Pipeline([\n",
-    "    (\"word2vec vectorizer\", MeanEmbeddingVectorizer(w2v)),\n",
-    "    (\"extra trees\", ExtraTreesClassifier(n_estimators=200))])\n",
-    "etree_w2v_tfidf = Pipeline([\n",
-    "    (\"word2vec vectorizer\", TfidfEmbeddingVectorizer(w2v)),\n",
-    "    (\"extra trees\", ExtraTreesClassifier(n_estimators=200))])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def transform(X,word2vec):\n",
-    "    dim = 100\n",
     "    return np.array([\n",
     "        np.mean([word2vec[w] for w in words if w in word2vec]\n",
-    "                or [np.zeros(dim)], axis=0)\n",
+    "                or [np.zeros(100)], axis=0)\n",
     "        for words in X\n",
     "    ])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sum_transform(X,word2vec):\n",
-    "    dim = 100\n",
     "    return np.array([\n",
     "        np.sum([word2vec[w] for w in words if w in word2vec]\n",
-    "                or [np.zeros(dim)], axis=0)\n",
+    "                or [np.zeros(100)], axis=0)\n",
     "        for words in X\n",
     "    ])"
    ]
@@ -466,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +424,7 @@
        "             validation_fraction=0.1, verbose=False, warm_start=False)"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,16 +445,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE for V: 0.34334346005690697\n",
-      "RMSE for A: 0.24913387803853304\n",
-      "RMSE for D: 0.20710904640617162\n"
+      "RMSE for V: 0.3433978730580031\n",
+      "RMSE for A: 0.24944572423206343\n",
+      "RMSE for D: 0.2068895800114967\n"
      ]
     }
    ],
@@ -534,6 +465,27 @@
     "print(\"RMSE for A:\",np.sqrt(mean_squared_error(emo_test.A, A_pred)))\n",
     "D_pred = clf_D.predict(x_test)\n",
     "print(\"RMSE for D:\",np.sqrt(mean_squared_error(emo_test.D, D_pred)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.26657772576718775"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean([np.sqrt(mean_squared_error(emo_test.V, V_pred)),np.sqrt(mean_squared_error(emo_test.A, A_pred)),\n",
+    "       np.sqrt(mean_squared_error(emo_test.D, D_pred))])"
    ]
   },
   {
@@ -545,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +524,7 @@
        "             validation_fraction=0.1, verbose=False, warm_start=False)"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,16 +545,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE for V: 0.3458218124052251\n",
-      "RMSE for A: 0.2502452449486823\n",
-      "RMSE for D: 0.21046637538693508\n"
+      "RMSE for V: 0.34388282112060775\n",
+      "RMSE for A: 0.2489583446735075\n",
+      "RMSE for D: 0.20819777015729454\n"
      ]
     }
    ],
@@ -613,6 +565,27 @@
     "print(\"RMSE for A:\",np.sqrt(mean_squared_error(emo_test.A, A_pred)))\n",
     "D_pred = clf_D.predict(x_test)\n",
     "print(\"RMSE for D:\",np.sqrt(mean_squared_error(emo_test.D, D_pred)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.26701297865046997"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean([np.sqrt(mean_squared_error(emo_test.V, V_pred)),np.sqrt(mean_squared_error(emo_test.A, A_pred)),\n",
+    "       np.sqrt(mean_squared_error(emo_test.D, D_pred))])"
    ]
   },
   {
